# clapdb

./: .gitignore  pyproject.toml
clapdb/snippets/: admin.py  models.py
clapdb/snippets/migrations/: 0001_initial.py
clapdb/snippets/templatetags/: snippets_extras.py
clapdb/software/: admin.py  context_processors.py  models.py  urls.py  views.py
clapdb/software/migrations/: 0001_initial.py  0002_developer_slug_alter_software_linux.py  0002_feature_software_features.py  0003_alter_feature_options.py  0003_category_slug.py  0004_alter_feature_options.py  0005_alter_software_features.py
clapdb/software/static/software/css/: clapdb.css
clapdb/templates/: base.html  home.html
clapdb/templates/software/: developer.html  developer_list.html  free.html  search.html  software.html  software_list.html  stats.html
config/: urls.py
config/settings/: base.py  dev.py
static/software/css/: asaudio.css
