[tool.poetry]
name = "clapdb"
version = "0.1.0"
description = ""
authors = ["Martin Diers <martin@diers.us>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4"
psycopg2 = "^2.9"
django-bootstrap5 = "^"
python-memcached = "^1.59"
gunicorn = "^20.1.0"
django-clearcache = "^1.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
